# cpp3ds

./: .gitignore  .gitmodules  .install-dev3DS-dependencies.sh  README.md  build3dslib.sh
cmake/: FindFmt.cmake  cpp3ds.cmake
cmake/template_arm/: CMakeLists.txt
install/: 3ds.sh  emu.sh
src/cpp3ds/System/: CMakeLists.txt
